--- a/packages/czbank-rusher-workbench/src/lang/zh_CN/description.yaml
+++ b/packages/czbank-rusher-workbench/src/lang/zh_CN/description.yaml
@@ -1,3 +1,6 @@
 manager:
   name: 客户经理的真实姓名，创建后可以随时修改更改
   code: 客户经理的工号，作为ID生成的依据之一，创建仍然可以修改，但不再影响id
+
+product:
+  introduction: 用于向系统解释总行维护的产品概念，解析器设定将联系产品，影响对报表的解析结果。 
