[ADDED] product ui

--- a/packages/czbank-rusher-workbench/src/lang/zh_CN/description.yaml
+++ b/packages/czbank-rusher-workbench/src/lang/zh_CN/description.yaml
@@ -4,3 +4,6 @@ manager:
 
 product:
   introduction: 用于向系统解释总行维护的产品概念，解析器设定将联系产品，影响对报表的解析结果。 
+  name: 表示行内业务的概念名称。例如：活期存款
+  code: 作为信息系统对产品数据分别分类的依据
+  description: 产品的介绍，少于255字
