[FIXED] product properties

--- a/packages/czbank-rusher-workbench/src/lang/zh_CN/class.yaml
+++ b/packages/czbank-rusher-workbench/src/lang/zh_CN/class.yaml
@@ -31,7 +31,7 @@ product:
   description: 描述
   fieldIndex:
     label: 字段索引
-    averageDeposit: 日均存款列号
+    average: 日均列号
     balance: 余额列号
 
 activity:
